# workerd

./: .bazelrc  BUILD.bazel  WORKSPACE  build-README.md
android/: README.md
android/app/src/main/: AndroidManifest.xml  BUILD.bazel  LibraryManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/example/android/bazel/: MainActivity.java  MyService.java
go-sample/: BUILD  main.go
patches/capnp-cpp/: 0001-remove-libpthread-for-android-build.patch  0002-memfd-create-for-android-build.patch  0003-enable-keepalive-for-tcp.patch  0004-android-not-use-clang-tail.patch
patches/v8/: 0008-Speed-up-V8-bazel-build-by-always-using-target-cfg.patch  0009-Speed-up-V8-bazel-build-by-always-using-target-cfg.patch  0015-platform-header-for-android-build.patch  0016-disable-static-assert-for-android-build.patch  0017-platform-header-for-android-build.patch  0018-armv7-android-build.patch  0018-disable-static-assert-for-android-build.patch  0019-armv7-android-build-maglev.patch  0019-use-prebuilt-snapshot-bazel.patch  0020-build-c++20.patch  0021-armv7-android-build-missing-typename.patch  0022-build-c++20.patch
platform/: BUILD
rust-deps/crates/: BUILD.ahash-0.8.6.bazel
samples/helloworld/: config.capnp  config2.capnp  tunmgr.js  worker.js
src/workerd/api/: BUILD.bazel  global-scope.h  rtti.c++  web-socket.c++
src/workerd/io/: BUILD.bazel
src/workerd/jsg/: BUILD.bazel  setup.c++
src/workerd/server/: BUILD.bazel  cgo.h  go.c++  go.h  gofs-unix.c++  gofs-windows.c++  gofs.h  gox.capnp  server.c++  server.h  test.c++  workerd-api.c++  workerd-meta.capnp  workerd.c++
src/workerd/tools/: api-encoder.c++
src/workerd/util/: BUILD.bazel
toolchain/: BUILD
tools/windows/: bazel-env.bat
